force-app/main/default/objects/Account_Plan_Key_Player2__c/fields/Intapp_Relationships__c.field-meta.xml
<CustomField>
    <fullName>Intapp_Relationships__c</fullName>
    <label>Intapp Relationships</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>