force-app/main/default/objects/Account_Plan_Key_Player2__c/fields/Peering__c.field-meta.xml
<CustomField>
    <fullName>Peering__c</fullName>
    <label>Peering</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>